@@ -34,6 +34,8 @@ import org.toasthub.core.general.model.RestRequest;
 import org.toasthub.core.general.model.RestResponse;
 import org.toasthub.core.preference.model.PrefCacheUtil;
 import org.toasthub.pm.model.Deploy;
+import org.toasthub.pm.model.DeployPipeline;
+import org.toasthub.pm.model.DeploySystem;
 
 
 @Repository("PMDeployDao")
@@ -51,9 +53,18 @@ public class DeployDaoImpl implements DeployDao {
 	@Override
 	public void delete(RestRequest request, RestResponse response) throws Exception {
 		if (request.containsParam(GlobalConstant.ITEMID) && !"".equals(request.getParam(GlobalConstant.ITEMID))) {
+			String action = (String) request.getParams().get(GlobalConstant.ACTION);
+			if (action.contains("PIPELINE")) {
+				DeployPipeline deployPipeline = (DeployPipeline) entityManagerDataSvc.getInstance().getReference(DeployPipeline.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
+				entityManagerDataSvc.getInstance().remove(deployPipeline);
+			} else if (action.contains("SYSTEM")) {
+				DeploySystem deploySystem = (DeploySystem) entityManagerDataSvc.getInstance().getReference(DeploySystem.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
+				entityManagerDataSvc.getInstance().remove(deploySystem);
+			} else {
+				Deploy deploy = (Deploy) entityManagerDataSvc.getInstance().getReference(Deploy.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
+				entityManagerDataSvc.getInstance().remove(deploy);
+			}
 			
-			Deploy deploy = (Deploy) entityManagerDataSvc.getInstance().getReference(Deploy.class,  new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
-			entityManagerDataSvc.getInstance().remove(deploy);
 			
 		} else {
 			utilSvc.addStatus(RestResponse.ERROR, RestResponse.ACTIONFAILED, "Missing ID", response);
@@ -62,13 +73,28 @@ public class DeployDaoImpl implements DeployDao {
 
 	@Override
 	public void save(RestRequest request, RestResponse response) throws Exception {
-		Deploy deploy = (Deploy) request.getParam(GlobalConstant.ITEM);
-		entityManagerDataSvc.getInstance().merge(deploy);
+		String action = (String) request.getParams().get(GlobalConstant.ACTION);
+		if (action.contains("PIPELINE")) {
+			DeployPipeline deployPipeline = (DeployPipeline) request.getParam(GlobalConstant.ITEM);
+			entityManagerDataSvc.getInstance().merge(deployPipeline);
+		} else if (action.contains("SYSTEM")) {
+			DeploySystem deploySystem = (DeploySystem) request.getParam(GlobalConstant.ITEM);
+			entityManagerDataSvc.getInstance().merge(deploySystem);
+		} else {
+			Deploy deploy = (Deploy) request.getParam(GlobalConstant.ITEM);
+			entityManagerDataSvc.getInstance().merge(deploy);
+		}
 	}
 
 	@Override
 	public void items(RestRequest request, RestResponse response) throws Exception {
+		String action = (String) request.getParams().get(GlobalConstant.ACTION);
 		String queryStr = "SELECT NEW Deploy(x.id,x.name,x.lastSuccess,x.lastFail,x.lastDuration,x.runStatus,x.active,x.archive,x.locked,x.created,x.modified) FROM Deploy AS x ";
+		if (action.contains("PIPELINE")) {
+			queryStr = "SELECT NEW DeployPipeline(x.id,x.name,x.sequence,x.scmURL,x.branch,x.active,x.archive,x.locked,x.created,x.modified) FROM DeployPipeline AS x ";
+		} else if (action.contains("SYSTEM")) {
+			queryStr = "SELECT NEW DeploySystem(x.id,x.serverName,x.sshUsername,x.stagingDir,x.active,x.archive,x.locked,x.created,x.modified) FROM DeploySystem AS x ";
+		}
 		
 		boolean and = false;
 		if (request.containsParam(GlobalConstant.ACTIVE)) {
@@ -93,13 +119,17 @@ public class DeployDaoImpl implements DeployDao {
 			String lookupStr = "";
 			for (LinkedHashMap<String,String> item : searchCriteria) {
 				if (item.containsKey(GlobalConstant.SEARCHVALUE) && !"".equals(item.get(GlobalConstant.SEARCHVALUE)) && item.containsKey(GlobalConstant.SEARCHCOLUMN)) {
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME")){
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_NAME") ){
 						if (or) { lookupStr += " OR "; }
 						lookupStr += "x.name LIKE :nameValue"; 
 						or = true;
+					} else if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")) {
+						if (or) { lookupStr += " OR "; }
+						lookupStr += "x.serverName LIKE :nameValue"; 
+						or = true;
 					}
-
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS")){
+					if ( item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_STATUS") ||
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_STATUS") ){
 						if (or) { lookupStr += " OR "; }
 						lookupStr += "x.active LIKE :statusValue"; 
 						or = true;
@@ -131,12 +161,17 @@ public class DeployDaoImpl implements DeployDao {
 			
 			for (LinkedHashMap<String,String> item : orderCriteria) {
 				if (item.containsKey(GlobalConstant.ORDERCOLUMN) && item.containsKey(GlobalConstant.ORDERDIR)) {
-					if (item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_TABLE_NAME")){
+					if (item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_NAME")){
 						if (comma) { orderItems.append(","); }
 						orderItems.append("x.name ").append(item.get(GlobalConstant.ORDERDIR));
 						comma = true;
-					}
-					if (item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_TABLE_STATUS")){
+					} else if (item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")){
+						if (comma) { orderItems.append(","); }
+						orderItems.append("x.serverName ").append(item.get(GlobalConstant.ORDERDIR));
+						comma = true;
+					}	
+					if (item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_TABLE_STATUS") || item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_STATUS") ||
+							item.get(GlobalConstant.ORDERCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_STATUS")){
 						if (comma) { orderItems.append(","); }
 						orderItems.append("x.active ").append(item.get(GlobalConstant.ORDERDIR));
 						comma = true;
@@ -159,11 +194,13 @@ public class DeployDaoImpl implements DeployDao {
 		
 		if (searchCriteria != null){
 			for (LinkedHashMap<String,String> item : searchCriteria) {
-				if (item.containsKey(GlobalConstant.SEARCHVALUE) && !"".equals(item.get(GlobalConstant.SEARCHVALUE)) && item.containsKey(GlobalConstant.SEARCHCOLUMN)) {  
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME")){
+				if (item.containsKey(GlobalConstant.SEARCHVALUE) && !"".equals(item.get(GlobalConstant.SEARCHVALUE)) && item.containsKey(GlobalConstant.SEARCHCOLUMN)) { 
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_NAME") |
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")){
 						query.setParameter("nameValue", "%"+((String)item.get(GlobalConstant.SEARCHVALUE)).toLowerCase()+"%");
-					}
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS")){
+					} 
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_STATUS") ||
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_STATUS")){
 						if ("active".equalsIgnoreCase((String)item.get(GlobalConstant.SEARCHVALUE))) {
 							query.setParameter("statusValue", true);
 						} else if ("disabled".equalsIgnoreCase((String)item.get(GlobalConstant.SEARCHVALUE))) {
@@ -177,16 +214,35 @@ public class DeployDaoImpl implements DeployDao {
 			query.setFirstResult((Integer) request.getParam(GlobalConstant.LISTSTART));
 			query.setMaxResults((Integer) request.getParam(GlobalConstant.LISTLIMIT));
 		}
-		@SuppressWarnings("unchecked")
-		List<Deploy> deploy = query.getResultList();
-
-		response.addParam(GlobalConstant.ITEMS, deploy);
+		
+		
+		if (action.contains("PIPELINE")) {
+			@SuppressWarnings("unchecked")
+			List<DeployPipeline> deployPipeline = query.getResultList();
+			response.addParam(GlobalConstant.ITEMS, deployPipeline);
+		} else if (action.contains("SYSTEM")) {
+			@SuppressWarnings("unchecked")
+			List<DeploySystem> deploySystem = query.getResultList();
+			response.addParam(GlobalConstant.ITEMS, deploySystem);
+		} else {
+			@SuppressWarnings("unchecked")
+			List<Deploy> deploy = query.getResultList();
+			response.addParam(GlobalConstant.ITEMS, deploy);
+		}
+		
 		
 	}
 
 	@Override
 	public void itemCount(RestRequest request, RestResponse response) throws Exception {
+		String action = (String) request.getParams().get(GlobalConstant.ACTION);
 		String queryStr = "SELECT COUNT(DISTINCT x) FROM Deploy as x ";
+		if (action.contains("PIPELINE")) {
+			queryStr = "SELECT COUNT(DISTINCT x) FROM DeployPipeline as x ";
+		} else if (action.contains("SYSTEM")) {
+			queryStr = "SELECT COUNT(DISTINCT x) FROM DeploySystem as x ";
+		}
+
 		boolean and = false;
 		if (request.containsParam(GlobalConstant.ACTIVE)) {
 			if (!and) { queryStr += " WHERE "; }
@@ -209,12 +265,17 @@ public class DeployDaoImpl implements DeployDao {
 			String lookupStr = "";
 			for (LinkedHashMap<String,String> item : searchCriteria) {
 				if (item.containsKey(GlobalConstant.SEARCHVALUE) && !"".equals(item.get(GlobalConstant.SEARCHVALUE)) && item.containsKey(GlobalConstant.SEARCHCOLUMN)) {
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME")){
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_NAME")){
 						if (or) { lookupStr += " OR "; }
 						lookupStr += "x.name LIKE :nameValue"; 
 						or = true;
+					} else if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")) {
+						if (or) { lookupStr += " OR "; }
+						lookupStr += "x.serverName LIKE :nameValue"; 
+						or = true;
 					}
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS")){
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_STATUS") ||
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")){
 						if (or) { lookupStr += " OR "; }
 						lookupStr += "x.active LIKE :statusValue"; 
 						or = true;
@@ -240,16 +301,19 @@ public class DeployDaoImpl implements DeployDao {
 		if (searchCriteria != null){
 			for (LinkedHashMap<String,String> item : searchCriteria) {
 				if (item.containsKey(GlobalConstant.SEARCHVALUE) && !"".equals(item.get(GlobalConstant.SEARCHVALUE)) && item.containsKey(GlobalConstant.SEARCHCOLUMN)) {  
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME")){
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_NAME") ||
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")){
 						query.setParameter("nameValue", "%"+((String)item.get(GlobalConstant.SEARCHVALUE)).toLowerCase()+"%");
 					}
-					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_STATUS")){
+					if (item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_TABLE_NAME") || item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_PIPELINE_TABLE_STATUS") ||
+							item.get(GlobalConstant.SEARCHCOLUMN).equals("PM_DEPLOY_SYSTEM_TABLE_NAME")){
 						if ("active".equalsIgnoreCase((String)item.get(GlobalConstant.SEARCHVALUE))) {
 							query.setParameter("statusValue", true);
 						} else if ("disabled".equalsIgnoreCase((String)item.get(GlobalConstant.SEARCHVALUE))) {
 							query.setParameter("statusValue", false);
 						}
 					}
+					
 				}
 			}
 		}
@@ -265,13 +329,27 @@ public class DeployDaoImpl implements DeployDao {
 	@Override
 	public void item(RestRequest request, RestResponse response) throws Exception {
 		if (request.containsParam(GlobalConstant.ITEMID) && !"".equals(request.getParam(GlobalConstant.ITEMID))) {
+			String action = (String) request.getParams().get(GlobalConstant.ACTION);
 			String queryStr = "SELECT x FROM Deploy AS x WHERE x.id =:id";
+			if (action.contains("PIPELINE")) {
+				queryStr = "SELECT x FROM DeployPipeline AS x WHERE x.id =:id";
+			} else if (action.contains("SYSTEM")) {
+				queryStr = "SELECT x FROM DeploySystem AS x WHERE x.id =:id";
+			}
+			
 			Query query = entityManagerDataSvc.getInstance().createQuery(queryStr);
 		
-			query.setParameter("id", new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
-			Deploy deploy = (Deploy) query.getSingleResult();
-			
-			response.addParam(GlobalConstant.ITEM, deploy);
+			query.setParameter("id", Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
+			if (action.contains("PIPELINE")) {
+				DeployPipeline deployPipeline = (DeployPipeline) query.getSingleResult();
+				response.addParam(GlobalConstant.ITEM, deployPipeline);
+			} else if (action.contains("SYSTEM")) {
+				DeploySystem deploySystem = (DeploySystem) query.getSingleResult();
+				response.addParam(GlobalConstant.ITEM, deploySystem);
+			} else {
+				Deploy deploy = (Deploy) query.getSingleResult();
+				response.addParam(GlobalConstant.ITEM, deploy);
+			}
 		} else {
 			utilSvc.addStatus(RestResponse.ERROR, RestResponse.EXECUTIONFAILED, prefCacheUtil.getPrefText("GLOBAL_SERVICE", "GLOBAL_SERVICE_MISSING_ID",prefCacheUtil.getLang(request)), response);
 		}
